Fix navbar dropdown going out of view

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,8 @@
+.navbar {
+  border: 0;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26);
+}
+
 /* Space out content a bit */
 body {
   /*padding-top: 20px;*/
